# K2Skeltrack

./: INSTALL  Makefile.am  configure.ac
examples/: Makefile.am  test-kinect.c  test-kinect2.cc
k2_examples/: Makefile.am  test-kinect2  test-kinect2.cc
k2_examples/.deps/: test-kinect2.Po
k2_examples/.libs/: lt-test-kinect2  test-kinect2
skeltrack/: skeltrack-skeleton.c  skeltrack-util.c  skeltrack-util.h
tests/: Makefile.am
